# robot-learning-course-kr-homework

./: README.md
hw2_robot_control_mdps/: Installation_Guide.md  Installation_Guide.md.en.bak  README.md  README.md.en.bak  pyproject.toml  requirements.txt
hw2_robot_control_mdps/env/: so100_tracking_env.py  so100_tracking_env.py.en.bak
hw2_robot_control_mdps/exercises/: ex1.py  ex1.py.en.bak  ex2.py  ex2.py.en.bak  ex3.py  ex3.py.en.bak
hw2_robot_control_mdps/scripts/: __init__.py  __init__.py.en.bak  evaluate_rand_targets.py  evaluate_trajectory.py  interactive.py  inverse_kinematics.py  pid_control.py  pid_control.py.en.bak  quintic_splines.py  train.py  train.py.en.bak  utils.py  utils.py.en.bak
hw2_robot_control_mdps/so101_gym/assets/: so100_pos_ctrl.xml
hw3_imitation_learning/: README.md  README.md.en.bak  pyproject.toml  requirements.txt
hw3_imitation_learning/hw3/: dataset.py  dataset.py.en.bak  eval_utils.py  eval_utils.py.en.bak  model.py  model.py.en.bak  sim_env.py  sim_env.py.en.bak  teleop_utils.py  teleop_utils.py.en.bak
hw3_imitation_learning/scripts/: compute_actions.py  compute_actions.py.en.bak  configure_keys.py  configure_keys.py.en.bak  dagger_eval.py  dagger_eval.py.en.bak  eval.py  eval.py.en.bak  record_teleop_demos.py  record_teleop_demos.py.en.bak  train.py  train.py.en.bak
hw3_imitation_learning/so101_gym/: constants.py  constants.py.en.bak
hw3_imitation_learning/so101_gym/assets/: scene_so100.xml  so100_multicube_ee.xml  so100_transfer_cube_obstacle_ee.xml
hw3_imitation_learning/student_eval/: run_eval.py  run_eval.py.en.bak
(+70 files in other folders)
