[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "so101_gym"
version = "0.1.0"
description = "SO-101 robot simulation gym environment"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["so101_gym*"]

[tool.setuptools.package-data]
so101_gym = ["assets/**/*"]
